syntax = "proto3";

package bookStorePackage;

service Book {
    rpc createBook (BookItem) returns (BookItem);
    rpc readBook (BookRequest) returns (BookItem);
    rpc readBooks (Empty) returns (BookList);
}

message BookItem {
    int32 id = 1;
    string book = 2;
}

message BookRequest {
    int32 id = 1;
}

message BookList {
    repeated BookItem books = 1;
}

message Empty {}